--- a/css/food-crop.css
+++ b/css/food-crop.css
@@ -33,6 +33,14 @@ header {
 
     
 }
+.footer {
+  position:fixed;
+  bottom:0;
+  left:0;
+  width:100%;
+  height: 90px;
+  background-color: #D0DAEE;
+}
 
 .container {
 	width: 100%;
