--- a/css/home.css
+++ b/css/home.css
@@ -47,6 +47,15 @@ header {
 	background-repeat: no-repeat;
 }
 
+.footer {
+  position:fixed;
+  bottom:0;
+  left:0;
+  width:100%;
+  height: 90px;
+  background-color: #D0DAEE;
+}
+
 .container {
 	width: 100%;
 	max-width: 117rem;
