--- a/css/melon-seed.css
+++ b/css/melon-seed.css
@@ -33,7 +33,14 @@ header {
 
     
 }
-
+.footer {
+  position:fixed;
+  bottom:0;
+  left:0;
+  width:100%;
+  height: 90px;
+  background-color: #D0DAEE;
+}
 .container {
 	width: 100%;
 	max-width: 117rem;
