--- a/css/care-for-horses.css
+++ b/css/care-for-horses.css
@@ -218,25 +218,26 @@ li.move-right {
 	width: 100%;
 	position: relative;
 }
-.carrot-intro {
+.horse-intro {
     color: #fff;
     background: #ff7300;
     height: 20rem;
     margin-top: 3rem;
     width: 100%;
-	background-image: url('https://i0.wp.com/post.healthline.com/wp-content/uploads/2020/08/766x415_Carrot_Allergy-1-732x415.jpg?w=756&h=567');
-	background-position: center;
+	background-image: url('https://cdn0.wideopenpets.com/wp-content/uploads/2016/05/bigstock-Large-herd-of-beautiful-horses-119341082.jpg');
+	background-position: center
+	;
 	background-repeat: no-repeat;
 	background-size: cover;
 }
-.carrot-intro .carrot-header {
+.horse-intro .horse-header {
     font-size: 5rem;
     position: absolute;
     left: 13.5rem;
     padding-top: 2rem;
 }
 
-.carrot-intro .carrot-text {
+.horse-intro .horse-text {
     position: absolute;
     left: 13.7rem;
     top: 10rem;
@@ -251,7 +252,7 @@ main {
 	width: 100%;
 	height: 3900vh;
 }
-.carrot-container {
+.horse-container {
     /*border: 2px solid red;*/
     width: 60%;
     height: auto;
@@ -261,14 +262,14 @@ main {
     margin: 0 auto;
     padding: 5rem;
 }
-.carrot-container p {
+.horse-container p {
     font-size: 17.5px;
     text-align: start;
     line-height: 2.7rem;
     color: rgb(51, 51, 51);
 }
 
-.carrot-container ol {
+.horse-container ol {
     font-size: 17.5px;
     margin-top: 3.5rem;
     margin-bottom: 4rem;
@@ -276,34 +277,34 @@ main {
     left: 4rem;
     line-height: 2.7rem;
 }
-.carrot-container h3 {
+.horse-container h3 {
     font-size: 2.3rem;
     margin: 4rem 0;
     color: #325781;
 }
-.carrot-container h1 {
+.horse-container h1 {
     font-size: 3rem;
     margin: 4rem 0;
 }
-.carrot-container .horse-img {
-    background-image: url("https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fres.freestockphotos.biz%2Fpictures%2F17%2F17693-horse-portrait-pv.jpg&f=1&nofb=1");
+.horse-container .horse-img {
+    background-image: url("https://www.zastavki.com/pictures/originals/2013/Animals___Horses_Portrait_of_a_horse_053871_.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+    width: 100%;
+    height: 300px;
+    margin: 2rem 0;
+}
+.horse-container .misshapen-img {
+    background-image: url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fstablemanagement.com%2F.image%2Ft_share%2FMTQ1NDU4NTA1NDA2MTYyNzA1%2Ftips-on-purchasing-large-round-bales-of-hay-for-horses-promo-image.jpg&f=1&nofb=1");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
     width: 100%;
     height: 400px;
-    margin: 3rem 0;
+    margin: 2rem 0;
 }
-.carrot-container .misshapen-img {
-    background-image: url('https://www.perishablenews.com/wp-content/uploads/2019/01/p3-10.jpg');
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-    width: 100%;
-    height: 400px;
-    margin: 3rem 0;
-}
-.carrot-container .caring-img {
+.horse-container .caring-img {
     background-image: url('https://www.proflowers.com/blog/wp-content/uploads/2019/07/top-plant-care-tips-15-1.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
@@ -312,7 +313,7 @@ main {
     height: 400px;
     margin: 3rem 0;
 }
-.carrot-container .pest-img {
+.horse-container .pest-img {
     background-image: url('https://cdn.shopify.com/s/files/1/0258/5483/6788/articles/393109471389_7582202f-f5f0-4738-ab94-ed0ad8a973b1_1400x.progressive.png.jpg?v=1603273675');
 	background-position: center;
 	background-repeat: no-repeat;
@@ -321,7 +322,7 @@ main {
     height: 400px;
     margin: 3rem 0;
 }
-.carrot-container .fresh-carrot-img {
+.horse-container .fresh-carrot-img {
     background-image: url('https://img1.exportersindia.com/product_images/bc-full/dir_113/3372903/fresh-carrots-1553193.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
@@ -330,7 +331,7 @@ main {
     height: 400px;
     margin: 3rem 0;
 }
-.carrot-container .carrot-colors-img {
+.horse-container .carrot-colors-img {
     background-image: url('https://brightcoalitionblog.files.wordpress.com/2018/05/carrots-1.jpg');
 	background-position: center;
 	background-repeat: no-repeat;
@@ -339,3 +340,15 @@ main {
     height: 400px;
     margin: 3rem 0;
 }
+
+.horse-container .planting-img {
+    background-image: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fstablemanagement.com%2F.image%2Ft_share%2FMTQ1NDU4NTA1NDA2MTYyNzA1%2Ftips-on-purchasing-large-round-bales-of-hay-for-horses-promo-image.jpg&f=1&nofb=1"
+);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+    width: 100%;
+    height: 400px;
+    margin: 3rem 0;
+}
+
