--- a/css/sign-in.css
+++ b/css/sign-in.css
@@ -9,9 +9,17 @@
   grid-template-columns: 1fr;
 }
 
+
 header .intro {
   position: relative;
 }
+
+
+
+header .intro {
+  position: relative;
+}
+
 
 /** FOR SIGN IN FORM **/
 .signin-form {
@@ -131,6 +139,11 @@ body {
   justify-content: right;
 }
 
+.btn-primary {
+  background-color: #3cb371;
+}
+
+
 .btn-google {
   color: white;
   background-color: #ea4335;
@@ -144,10 +157,14 @@ body {
 .new-to-agrichub {
   justify-content: center;
   align-items: center;
+
+  margin: 1em auto 0 auto;
+=======
   border: 1px solid rgba(207, 207, 207, 0.692);
   border-radius: 7px;
 
   margin: 1em auto 0 auto;
+
 
   padding: 0 10px;
   color: rgb(88, 88, 88);
@@ -159,6 +176,11 @@ body {
 .new-to-agrichub a:hover {
   text-decoration: underline;
 }
+
+.new-to-agrichub p {
+  text-align: center;
+}
+
 /* Fallback for Edge
 -------------------------------------------------- */
 
