--- a/css/food-crop.css
+++ b/css/food-crop.css
@@ -30,17 +30,13 @@ header {
 	position: absolute;
 	top: 0;
 	left: 0;
+	background-image: url('https://images.pexels.com/photos/4260541/pexels-photo-4260541.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+	background-position: bottom;
+	background-repeat: no-repeat;
+	background-size: cover;
+	border-radius: 0 0 50% 0;
+}
 
-    
-}
-.footer {
-  position:fixed;
-  bottom:0;
-  left:0;
-  width:100%;
-  height: 90px;
-  background-color: #D0DAEE;
-}
 
 .container {
 	width: 100%;
@@ -64,9 +60,10 @@ header {
 nav {
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
 	width: 100%;
 	height: 8rem;
-	/*border-bottom: 1px solid rgba(0, 0, 0, 0.1);*/
+	/*border: 2px solid rgb(0, 0, 0);*/
 	position: relative;
 }
 
@@ -78,37 +75,23 @@ nav {
 	letter-spacing: 0.2rem;
 	border-radius: 5rem;
 	margin-right: 10rem;
-	/*width: 5rem;
-	height: 5rem;
-	background-color: #eb3007;
-	display: flex;
-	border-radius: 100%;
-	margin-right: 5rem;*/
 }
 .logo .agricul {
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	padding: 0.5rem 0 0.5rem 1rem;
 	border-top-left-radius: 2rem;
 	border-bottom-left-radius: 2rem;
-	color: rgba(0, 0, 0, 0.733);
+	color: #fff;
     
 }
 .logo .hub {
-	/*background: rgba( 0, 0, 0, 0.35 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 3.5px );
-    -webkit-backdrop-filter: blur( 3.5px );
-	padding: 0.5rem 1rem 0.5rem 0;
-	border-top-right-radius: 2rem;
-	border-bottom-right-radius: 2rem;*/
 	color: #ff7300;
 }
 
 
 .nav-list {
 	display: flex;
-	width: 100%;
-	align-items: center;
+	/*border: 2px solid rgb(255, 0, 0);*/
 }
 
 .nav-list li {
@@ -122,7 +105,7 @@ nav {
 
 .nav-list a {
 	display: block;
-	color: #000;
+	color: rgb(255, 255, 255);
 	padding: 0 1.5rem;
 	font-size: 1.7rem;
 	/*text-transform: uppercase;*/
@@ -213,21 +196,16 @@ li.move-right {
 
 /* food crop */
 .overlay {
-	background: rgba( 0, 0, 0, 0.65 );
+	/*background: rgba( 0, 0, 0, 0.65 );*/
 	height: 20rem;
 	width: 100%;
 	position: relative;
 }
 .food-crop-intro {
     color: #fff;
-    background: #ff7300;
     height: 20rem;
-    margin-top: 3rem;
+    margin-top: 10rem;
     width: 100%;
-	background-image: url('https://images.pexels.com/photos/4260541/pexels-photo-4260541.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
-	background-position: bottom;
-	background-repeat: no-repeat;
-	background-size: cover;
 }
 .food-crop-intro .food-crop-header {
     font-size: 5rem;
@@ -246,7 +224,7 @@ li.move-right {
 }
 main {
 	position: absolute;
-	top: 31rem;
+	top: 81rem;
 	border: 2px solid #000;
 	width: 100%;
 	height: 700vh;
