--- a/css/index.css
+++ b/css/index.css
@@ -3,233 +3,236 @@
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
-
 
 header {
-    background-color: chocolate;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-color: chocolate;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .left-container {
+  background-color: #ee5522;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3CradialGradient id='a' gradientUnits='objectBoundingBox'%3E%3Cstop offset='0' stop-color='%23FB3'/%3E%3Cstop offset='1' stop-color='%23ee5522'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='750' x2='1550' y2='750'%3E%3Cstop offset='0' stop-color='%23f7882b'/%3E%3Cstop offset='1' stop-color='%23ee5522'/%3E%3C/linearGradient%3E%3Cpath id='s' fill='url(%23b)' d='M1549.2 51.6c-5.4 99.1-20.2 197.6-44.2 293.6c-24.1 96-57.4 189.4-99.3 278.6c-41.9 89.2-92.4 174.1-150.3 253.3c-58 79.2-123.4 152.6-195.1 219c-71.7 66.4-149.6 125.8-232.2 177.2c-82.7 51.4-170.1 94.7-260.7 129.1c-90.6 34.4-184.4 60-279.5 76.3C192.6 1495 96.1 1502 0 1500c96.1-2.1 191.8-13.3 285.4-33.6c93.6-20.2 185-49.5 272.5-87.2c87.6-37.7 171.3-83.8 249.6-137.3c78.4-53.5 151.5-114.5 217.9-181.7c66.5-67.2 126.4-140.7 178.6-218.9c52.3-78.3 96.9-161.4 133-247.9c36.1-86.5 63.8-176.2 82.6-267.6c18.8-91.4 28.6-184.4 29.6-277.4c0.3-27.6 23.2-48.7 50.8-48.4s49.5 21.8 49.2 49.5c0 0.7 0 1.3-0.1 2L1549.2 51.6z'/%3E%3Cg id='g'%3E%3Cuse href='%23s' transform='scale(0.12) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.2) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.25) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(0.3) rotate(-20)'/%3E%3Cuse href='%23s' transform='scale(0.4) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(0.5) rotate(20)'/%3E%3Cuse href='%23s' transform='scale(0.6) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.7) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.835) rotate(-40)'/%3E%3Cuse href='%23s' transform='scale(0.9) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(1.05) rotate(25)'/%3E%3Cuse href='%23s' transform='scale(1.2) rotate(8)'/%3E%3Cuse href='%23s' transform='scale(1.333) rotate(-60)'/%3E%3Cuse href='%23s' transform='scale(1.45) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(1.6) rotate(10)'/%3E%3C/g%3E%3C/defs%3E%3Cg %3E%3Cg transform='translate(0 225)'%3E%3Ccircle fill='url(%23a)' r='3000'/%3E%3Cg opacity='0.5'%3E%3Ccircle fill='url(%23a)' r='2000'/%3E%3Ccircle fill='url(%23a)' r='1800'/%3E%3Ccircle fill='url(%23a)' r='1700'/%3E%3Ccircle fill='url(%23a)' r='1651'/%3E%3Ccircle fill='url(%23a)' r='1450'/%3E%3Ccircle fill='url(%23a)' r='1250'/%3E%3Ccircle fill='url(%23a)' r='1175'/%3E%3Ccircle fill='url(%23a)' r='900'/%3E%3Ccircle fill='url(%23a)' r='750'/%3E%3Ccircle fill='url(%23a)' r='500'/%3E%3Ccircle fill='url(%23a)' r='380'/%3E%3Ccircle fill='url(%23a)' r='250'/%3E%3C/g%3E%3Cg transform='rotate(-133.2 0 0)'%3E%3Cuse href='%23g' transform='rotate(10)'/%3E%3Cuse href='%23g' transform='rotate(120)'/%3E%3Cuse href='%23g' transform='rotate(240)'/%3E%3C/g%3E%3Ccircle fill-opacity='0.38' fill='url(%23a)' r='3000'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+  height: 100%;
+  width: 50%;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+.brand-name {
+  text-align: center;
+  margin-top: 1em;
+  position: absolute;
+  left: 2.2em;
+}
+.illustration img {
+  width: 80%;
+  margin-top: 3em;
+  margin-left: 2em;
+}
+.right-container {
+  background-color: #ffffff;
+  height: 100%;
+  width: 50%;
+}
+.right-container h1 {
+  text-align: center;
+  color: rgb(0, 126, 0);
+  margin-bottom: 1em;
+  margin-top: 4em;
+  font-size: 40px;
+}
+.right-container form {
+  text-align: center;
+  margin-top: 1.5em;
+}
+.right-container .social-media-clickable-icons {
+  display: flex;
+  justify-content: space-between;
+  /*border: 2px solid #000;*/
+  width: 30%;
+  margin: 0 auto;
+}
+.right-container .social-media-clickable-icons .google {
+  padding: 7px;
+  width: 45px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.right-container .social-media-clickable-icons .twitter {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.right-container .social-media-clickable-icons .facebook {
+  /* border: 2px solid red;*/
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.right-container .or-register {
+  text-align: center;
+  margin-top: 1.5em;
+  font-weight: 500;
+  color: rgb(78, 78, 78);
+}
+.right-container form input {
+  width: 60%;
+  padding: 13px;
+  font-size: 18px;
+  border-radius: 10px;
+  border: 2px solid rgba(57, 131, 7, 0.425);
+  outline: none;
+  background-color: rgba(238, 238, 238, 0.466);
+  color: rgb(29, 29, 29);
+}
+.right-container form .buttons {
+  margin: 0 auto;
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+}
+.right-container form .sign-up {
+  padding: 15px 65px;
+  border-radius: 10px;
+  border: none;
+  background-color: #189e45;
+  color: #fff;
+  font-weight: 600;
+  font-size: 16px;
+  cursor: pointer;
+}
+.right-container form .sign-in {
+  padding: 15px 65px;
+  border-radius: 10px;
+  border: 2px solid #189e45;
+  background-color: transparent;
+  color: #189e45;
+  font-weight: 600;
+  font-size: 16px;
+  cursor: pointer;
+}
+.terms {
+  text-align: left;
+  width: 60%;
+  margin: 1em auto 3em auto;
+}
+
+span {
+  color: #189e45;
+}
+
+.buttons-mobile {
+  display: none;
+}
+.intro {
+  width: 90%;
+  height: auto;
+  margin: 8em auto 0 auto;
+}
+.intro p {
+  margin: 0 auto;
+  font-size: 16px;
+  line-height: 30px;
+  color: rgba(255, 255, 255, 0.842);
+}
+.intro h1 {
+  color: #fff;
+  font-size: 30px;
+  /*margin-bottom: 30px;*/
+}
+#checkBox {
+  float: left;
+  width: 50px;
+  margin-left: 140px;
+  margin-top: 5px;
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    height: 100vh;
+  }
+  .brand-name {
+    text-align: center;
+    margin-top: 1.5em;
+    position: absolute;
+    font-size: 15px;
+    left: 2em;
+  }
+  .left-container {
+    width: 100%;
     background-color: #ee5522;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3CradialGradient id='a' gradientUnits='objectBoundingBox'%3E%3Cstop offset='0' stop-color='%23FB3'/%3E%3Cstop offset='1' stop-color='%23ee5522'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='750' x2='1550' y2='750'%3E%3Cstop offset='0' stop-color='%23f7882b'/%3E%3Cstop offset='1' stop-color='%23ee5522'/%3E%3C/linearGradient%3E%3Cpath id='s' fill='url(%23b)' d='M1549.2 51.6c-5.4 99.1-20.2 197.6-44.2 293.6c-24.1 96-57.4 189.4-99.3 278.6c-41.9 89.2-92.4 174.1-150.3 253.3c-58 79.2-123.4 152.6-195.1 219c-71.7 66.4-149.6 125.8-232.2 177.2c-82.7 51.4-170.1 94.7-260.7 129.1c-90.6 34.4-184.4 60-279.5 76.3C192.6 1495 96.1 1502 0 1500c96.1-2.1 191.8-13.3 285.4-33.6c93.6-20.2 185-49.5 272.5-87.2c87.6-37.7 171.3-83.8 249.6-137.3c78.4-53.5 151.5-114.5 217.9-181.7c66.5-67.2 126.4-140.7 178.6-218.9c52.3-78.3 96.9-161.4 133-247.9c36.1-86.5 63.8-176.2 82.6-267.6c18.8-91.4 28.6-184.4 29.6-277.4c0.3-27.6 23.2-48.7 50.8-48.4s49.5 21.8 49.2 49.5c0 0.7 0 1.3-0.1 2L1549.2 51.6z'/%3E%3Cg id='g'%3E%3Cuse href='%23s' transform='scale(0.12) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.2) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.25) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(0.3) rotate(-20)'/%3E%3Cuse href='%23s' transform='scale(0.4) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(0.5) rotate(20)'/%3E%3Cuse href='%23s' transform='scale(0.6) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.7) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.835) rotate(-40)'/%3E%3Cuse href='%23s' transform='scale(0.9) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(1.05) rotate(25)'/%3E%3Cuse href='%23s' transform='scale(1.2) rotate(8)'/%3E%3Cuse href='%23s' transform='scale(1.333) rotate(-60)'/%3E%3Cuse href='%23s' transform='scale(1.45) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(1.6) rotate(10)'/%3E%3C/g%3E%3C/defs%3E%3Cg %3E%3Cg transform='translate(0 225)'%3E%3Ccircle fill='url(%23a)' r='3000'/%3E%3Cg opacity='0.5'%3E%3Ccircle fill='url(%23a)' r='2000'/%3E%3Ccircle fill='url(%23a)' r='1800'/%3E%3Ccircle fill='url(%23a)' r='1700'/%3E%3Ccircle fill='url(%23a)' r='1651'/%3E%3Ccircle fill='url(%23a)' r='1450'/%3E%3Ccircle fill='url(%23a)' r='1250'/%3E%3Ccircle fill='url(%23a)' r='1175'/%3E%3Ccircle fill='url(%23a)' r='900'/%3E%3Ccircle fill='url(%23a)' r='750'/%3E%3Ccircle fill='url(%23a)' r='500'/%3E%3Ccircle fill='url(%23a)' r='380'/%3E%3Ccircle fill='url(%23a)' r='250'/%3E%3C/g%3E%3Cg transform='rotate(-133.2 0 0)'%3E%3Cuse href='%23g' transform='rotate(10)'/%3E%3Cuse href='%23g' transform='rotate(120)'/%3E%3Cuse href='%23g' transform='rotate(240)'/%3E%3C/g%3E%3Ccircle fill-opacity='0.38' fill='url(%23a)' r='3000'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
     background-attachment: fixed;
     background-size: cover;
-    height: 100%;
-    width: 50%;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-}
-.brand-name {
-   text-align: center;
-   margin-top: 1em;
-   position: absolute;
-   left: 2.2em;
-}
-.illustration img {
-    width: 80%;
-    margin-top: 3em;
-    margin-left: 2em;
-}
-.right-container {
-    background-color: #ffffff;
-    height: 100%;
-    width: 50%;
-}
-.right-container h1 {
-    text-align: center;
-    color: rgb(0, 126, 0);
-    margin-bottom: 1em;
-    margin-top: 4em;
-    font-size: 40px;
-}
-.right-container form {
-    text-align: center;
-    margin-top: 1.5em;
-}
-.right-container .social-media-clickable-icons {
-    display: flex;
-    justify-content: space-between;
+  }
+  .left-container .illustration {
+    display: none;
+  }
+  .right-container {
+    display: none;
+  }
+  .intro {
+    width: 90%;
+    height: auto;
+    margin: 7em auto 0 auto;
+  }
+  .intro p {
+    margin: 0 auto;
+    padding: 10px;
+    font-size: 16px;
+    line-height: 25px;
+    color: rgba(255, 255, 255, 0.842);
+  }
+  .intro h1 {
+    color: #fff;
+    font-size: 30px;
+  }
+  .buttons-mobile {
     /*border: 2px solid #000;*/
-    width: 30%;
     margin: 0 auto;
-}
-.right-container .social-media-clickable-icons .google {
-    padding: 7px;
-    width: 45px;
-    height: 45px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-}
-.right-container .social-media-clickable-icons .twitter {
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-}
-.right-container .social-media-clickable-icons .facebook {
-   /* border: 2px solid red;*/
-    width: 50px;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-}
-.right-container .or-register {
+    width: 100%;
     text-align: center;
-    margin-top: 1.5em;
-    font-weight: 500;
-    color: rgb(78, 78, 78);
-}
-.right-container form input {
-    width: 60%;
-    padding: 13px;
-    font-size: 18px;
-    border-radius: 10px;
-    border: 2px solid rgba(57, 131, 7, 0.425);
-    outline: none;
-    background-color: rgba(238, 238, 238, 0.466);
-    color: rgb(29, 29, 29);
-}
-.right-container form .buttons {
-    margin: 0 auto;
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
-}
-.right-container form .sign-up {
-    padding: 15px 65px;
+    display: block;
+  }
+  .buttons-mobile .sign-up-mobile {
+    padding: 15px;
+    width: 80%;
     border-radius: 10px;
     border: none;
     background-color: #189e45;
     color: #fff;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 18px;
     cursor: pointer;
-}
-.right-container form .sign-in {
-    padding: 15px 65px;
+  }
+  .buttons-mobile .sign-in-mobile {
+    padding: 15px;
+    width: 80%;
     border-radius: 10px;
-    border: 2px solid #189e45;
-    background-color: transparent;
+    border: none;
+    background-color: #ffffff;
     color: #189e45;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 18px;
     cursor: pointer;
-}
-.terms {
-    text-align: left;
-    width: 60%;
-    margin: 1em auto 3em auto;
-
-}
-
-span {
-    color: #189e45;
-}
-
-.buttons-mobile {
-    display: none;
-}
-.intro {
-    width: 90%;
-    height: auto;
-    margin: 8em auto 0 auto;
-}
-.intro p {
-    margin: 0 auto;
-    font-size: 16px;  
-    line-height: 30px;
-    color: rgba(255, 255, 255, 0.842);
-}
-.intro h1 {
-    color: #fff;
-    font-size: 30px;
-    /*margin-bottom: 30px;*/
-}
-
-
-@media screen and (max-width: 768px) {
-    header {
-        height: 100vh;
-    }
-    .brand-name {
-        text-align: center;
-        margin-top: 1.5em;
-        position: absolute;
-        font-size: 15px;
-        left: 2em;
-     }
-     .left-container {
-         width: 100%;
-         background-color: #ee5522;
-         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3CradialGradient id='a' gradientUnits='objectBoundingBox'%3E%3Cstop offset='0' stop-color='%23FB3'/%3E%3Cstop offset='1' stop-color='%23ee5522'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='750' x2='1550' y2='750'%3E%3Cstop offset='0' stop-color='%23f7882b'/%3E%3Cstop offset='1' stop-color='%23ee5522'/%3E%3C/linearGradient%3E%3Cpath id='s' fill='url(%23b)' d='M1549.2 51.6c-5.4 99.1-20.2 197.6-44.2 293.6c-24.1 96-57.4 189.4-99.3 278.6c-41.9 89.2-92.4 174.1-150.3 253.3c-58 79.2-123.4 152.6-195.1 219c-71.7 66.4-149.6 125.8-232.2 177.2c-82.7 51.4-170.1 94.7-260.7 129.1c-90.6 34.4-184.4 60-279.5 76.3C192.6 1495 96.1 1502 0 1500c96.1-2.1 191.8-13.3 285.4-33.6c93.6-20.2 185-49.5 272.5-87.2c87.6-37.7 171.3-83.8 249.6-137.3c78.4-53.5 151.5-114.5 217.9-181.7c66.5-67.2 126.4-140.7 178.6-218.9c52.3-78.3 96.9-161.4 133-247.9c36.1-86.5 63.8-176.2 82.6-267.6c18.8-91.4 28.6-184.4 29.6-277.4c0.3-27.6 23.2-48.7 50.8-48.4s49.5 21.8 49.2 49.5c0 0.7 0 1.3-0.1 2L1549.2 51.6z'/%3E%3Cg id='g'%3E%3Cuse href='%23s' transform='scale(0.12) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.2) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.25) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(0.3) rotate(-20)'/%3E%3Cuse href='%23s' transform='scale(0.4) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(0.5) rotate(20)'/%3E%3Cuse href='%23s' transform='scale(0.6) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.7) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.835) rotate(-40)'/%3E%3Cuse href='%23s' transform='scale(0.9) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(1.05) rotate(25)'/%3E%3Cuse href='%23s' transform='scale(1.2) rotate(8)'/%3E%3Cuse href='%23s' transform='scale(1.333) rotate(-60)'/%3E%3Cuse href='%23s' transform='scale(1.45) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(1.6) rotate(10)'/%3E%3C/g%3E%3C/defs%3E%3Cg %3E%3Cg transform='translate(0 225)'%3E%3Ccircle fill='url(%23a)' r='3000'/%3E%3Cg opacity='0.5'%3E%3Ccircle fill='url(%23a)' r='2000'/%3E%3Ccircle fill='url(%23a)' r='1800'/%3E%3Ccircle fill='url(%23a)' r='1700'/%3E%3Ccircle fill='url(%23a)' r='1651'/%3E%3Ccircle fill='url(%23a)' r='1450'/%3E%3Ccircle fill='url(%23a)' r='1250'/%3E%3Ccircle fill='url(%23a)' r='1175'/%3E%3Ccircle fill='url(%23a)' r='900'/%3E%3Ccircle fill='url(%23a)' r='750'/%3E%3Ccircle fill='url(%23a)' r='500'/%3E%3Ccircle fill='url(%23a)' r='380'/%3E%3Ccircle fill='url(%23a)' r='250'/%3E%3C/g%3E%3Cg transform='rotate(-133.2 0 0)'%3E%3Cuse href='%23g' transform='rotate(10)'/%3E%3Cuse href='%23g' transform='rotate(120)'/%3E%3Cuse href='%23g' transform='rotate(240)'/%3E%3C/g%3E%3Ccircle fill-opacity='0.38' fill='url(%23a)' r='3000'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-         background-attachment: fixed;
-         background-size: cover;
-     }
-    .left-container .illustration{
-        display: none;
-    }
-    .right-container {
-        display: none;
-    }
-    .intro {
-        width: 90%;
-        height: auto;
-        margin: 7em auto 0 auto;
-    }
-    .intro p {
-        margin: 0 auto;
-        padding: 10px;    
-        font-size: 16px;  
-        line-height: 25px;
-        color: rgba(255, 255, 255, 0.842);
-    }
-    .intro h1 {
-        color: #fff;
-        font-size: 30px;
-    }
-    .buttons-mobile {
-        /*border: 2px solid #000;*/
-        margin: 0 auto;
-        width: 100%;
-        text-align: center;
-        display: block;
-    }
-    .buttons-mobile .sign-up-mobile {
-        padding: 15px;
-        width: 80%;
-        border-radius: 10px;
-        border: none;
-        background-color: #189e45;
-        color: #fff;
-        font-weight: 600;
-        font-size: 18px;
-        cursor: pointer;
-    }
-    .buttons-mobile .sign-in-mobile {
-        padding: 15px;
-        width: 80%;
-        border-radius: 10px;
-        border: none;
-        background-color: #ffffff;
-        color: #189e45;
-        font-weight: 600;
-        font-size: 18px;
-        cursor: pointer;
-    }
+  }
 }
